--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.85.3",
     "axios": "^1.11.0",
     "lucide-react": "^0.539.0",
+    "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
